--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,15 @@ file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
 # Define PROJECT_INCLUDE to be the path to the include directory of the project
 set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/src/")
 
+# finding the SFML executable
+find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
+
 # Declaring our executable
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
+# Linking SFML to project
+target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
 
 # # #############################################################################
 # Project build settings
